--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -3,7 +3,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
-    min-height: 75vh;
+    min-height: 77vh;
 
     .details {
         padding: 30px 0px;
@@ -80,6 +80,11 @@
                 width: 100%;
                 height: 100%;
                 opacity: 0.6;
+                transition: 0.3s ease-in-out;
+
+                &:hover {
+                    transform: scale(1.2);
+                }
             }
         }
     }
