--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -3,6 +3,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 20px 40px;
+    position: sticky;
+    top: 0;
+    background-color: #081b29;
+    z-index: 1000;
 
     .logo {
         text-decoration: none;
