Services section completed

--- a/src/Components/Home/Home.scss
+++ b/src/Components/Home/Home.scss
@@ -11,6 +11,10 @@
             font-size: 34px;
             color: rgb(240, 234, 226);
             margin: 0;
+
+            span {
+                color: rgb(199, 130, 41);
+            }
         }
 
         h3 {
