Portfolio section completed

--- a/src/Components/Services/Services.scss
+++ b/src/Components/Services/Services.scss
@@ -2,7 +2,7 @@
     padding: 20px 40px;
     min-height: 100vh;
 
-    .titile {
+    .title {
         padding: 30px 0px;
         display: flex;
         flex-direction: column;
@@ -99,7 +99,7 @@
 
     #services {
 
-        .titile {
+        .title {
             padding: 10px 0px;
             margin-top: 0;
 
