--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -150,7 +150,7 @@
                             height: 100%;
                             border-radius: 50px;
                             transition: width 1.5s ease-in-out;
-                            background-color: #00abf0;
+                            background-color: #081b29e4;
                             box-shadow: 2px 2px 4px rgba(0, 171, 240, 0.5), -2px -2px 4px rgba(0, 171, 240, 0.5),
                                 2px -2px 4px rgba(0, 171, 240, 0.5), -2px 2px 4px rgba(0, 171, 240, 0.5);
                         }
