--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -85,6 +85,7 @@
                 label {
                     color: rgb(240, 234, 226);
                     margin: 10px 0px;
+                    display: inline-block;
                 }
                 input, textarea {
                     max-width: 70%;
@@ -111,6 +112,84 @@
                     &:hover {
                         color: rgb(199, 130, 41);
                         background-color:transparent;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+@media (max-width:769px) {
+    #contact {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .title {
+            padding: 15px 0px;
+            margin: 0px;
+
+            h2 {
+                font-size: 18px;
+            }
+        }
+
+        .section {
+            grid-template-columns: 1fr;
+            margin: 10px;
+
+            .details {
+                padding: 0; 
+                display: flex;
+                justify-content: center;
+
+                .items {
+
+                    h3 {
+                        font-size: 20px;
+                    }
+
+                    p {
+                        font-size: 8px;
+                        width: 80%;
+                    }
+
+                    .icon {
+                        margin: 10px 0px;
+
+                        i {
+                            font-size: 12px;
+                            margin-right: 10px;
+                        }
+
+                        span {
+                            font-size: 12px;
+                        }
+                    }
+
+                }
+            }
+
+            .form {
+
+                .items {
+
+                    max-width: 270px;
+
+                    label {
+                        font-size: 10px;
+                        max-width: 150px;
+                    }
+
+                    input, textarea {
+
+                        padding: 10px;
+                    }
+
+                    button {
+                        padding: 8px;
+                        max-width: 100px;
+                        font-weight: 400;
                     }
                 }
             }
