--- a/src/Components/About/About.scss
+++ b/src/Components/About/About.scss
@@ -163,7 +163,7 @@
 
 @media (max-width:769px) {
     #about {
-
+        padding:20px 15px;
         .details {
             padding: 0;
             margin: 0;
