--- a/src/Components/Contact/Contact.scss
+++ b/src/Components/Contact/Contact.scss
@@ -125,6 +125,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 20px 15px;
         .title {
             padding: 15px 0px;
             margin: 0px;
