--- a/src/Components/Footer/Footer.scss
+++ b/src/Components/Footer/Footer.scss
@@ -1,17 +1,39 @@
 #footer {
     padding: 20px 40px;
     .details {
-        h3 {
-            font-size: 28px;
+        // h3 {
+        //     font-size: 28px;
+        //     font-style: italic;
+        //     font-weight: 600;
+        //     letter-spacing: 2px;
+        //     margin: 0;
+        //     text-transform: uppercase;
+        //     background: linear-gradient(90deg, #00abf0, #00f09e);
+        //     -webkit-background-clip: text;
+        //     -webkit-text-fill-color: transparent;
+        //     display: inline;
+        // }
+
+        .logo {
+            display: flex;
+            align-items: start;
+            text-decoration: none;
+            width: 150px;
             font-style: italic;
-            font-weight: 600;
+            font-weight: bold;
             letter-spacing: 2px;
-            margin: 0;
-            text-transform: uppercase;
-            background: linear-gradient(90deg, #00abf0, #00f09e);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            display: inline;
+            transition: all 0.3s ease-in-out;
+    
+            img {
+                object-fit: cover;
+                width: 120px;
+                height: 70px;
+                transform: scale(1.4)
+            }
+    
+            &:hover {
+                transform: scale(1.1);
+            }
         }
 
         p {
@@ -55,6 +77,7 @@
 
 @media (max-width:769px) {
     #footer {
+        padding: 20px 15px;
         .details {
             h3 {
                 font-size: 14px;
