--- a/src/Components/Services/Services.scss
+++ b/src/Components/Services/Services.scss
@@ -98,7 +98,7 @@
 @media (max-width:769px) {
 
     #services {
-
+        padding: 20px 15px;
         .title {
             padding: 10px 0px;
             margin-top: 0;
@@ -112,6 +112,10 @@
         }
 
         .items {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             grid-template-columns: 1fr;
 
             .item1,.item2,.item3 {
